--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "blog",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
